# application-bareme-amv-france

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  PRODUCT.md  README.en.md  README.es.md  README.ja.md  README.md  README.ru.md  README.zh.md  RELEASE_NOTES_v0.8.0.md  doctor.config.json  index.html  knip.json  lancer-app.bat  notes.html  overlay.html  package-lock.json  package.json  player-menu.html  resultats-notes.html  tailwind.config.js  tauri_output.txt  vite.config.ts
.claude/: settings.local.json
.claude/skills/: impeccable
.githooks/: post-commit
scripts/: sync-i18n.mjs
src/: App.tsx  index.css  main.tsx  notes-entry.tsx  overlay-entry.tsx  player-menu-entry.tsx  resultats-notes-entry.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_windows.rs  lib.rs  main.rs  state.rs  window_chrome.rs
src-tauri/src/player/: bootstrap.rs  commands.rs  mod.rs  mpv_ffi.rs  mpv_probe.rs  mpv_types.rs  mpv_win32.rs  mpv_window.rs  mpv_window_geometry.rs  mpv_window_mode.rs  mpv_window_state.rs  mpv_wrapper.rs  mpv_wrapper_media.rs  mpv_wrapper_properties.rs
src-tauri/src/player/commands/: cache.rs  control.rs  media.rs  overlay.rs  parsing.rs  probe.rs  probe_frame.rs  probe_media.rs  shared.rs  tools.rs  window.rs
src-tauri/src/player/mpv_probe/: ffprobe.rs  media_info.rs  parsing.rs  process_wait.rs
src-tauri/src/project/: manager.rs
src-tauri/src/project/manager/: baremes.rs  json_io.rs  paths.rs  project_files.rs  project_listing.rs  types.rs  user_settings.rs
src-tauri/src/video/: import.rs
src/constants/: projectLinks.ts  (+1 more)
(+350 files in other folders)
