[package]
name = "amv-notation"
version = "0.1.0"
description = "AMV Notation - Video judging application"
authors = ["you"]
license = ""
repository = ""
default-run = "amv-notation"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.1", features = ["dialog-all", "fs-all", "path-all", "shell-open", "protocol-asset"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
libloading = "0.8"
dirs = "5"
base64 = "0.22"

[features]
custom-protocol = ["tauri/custom-protocol"]
