[package]
name = "amv-notation"
version = "0.9.0"
description = "AMV Notation - Video judging application"
authors = ["Netsuma"]
license = ""
repository = ""
default-run = "amv-notation"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "amv_notation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.3", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
libloading = "0.8"
dirs = "5"
base64 = "0.22"
lazy_static = "1.5"

[features]
custom-protocol = ["tauri/custom-protocol"]
